--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,27 +1,43 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
+@import url('https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  font-family: 'Epilogue', sans-serif;
+}
+
+.viewPage{
+  height: 100vh;
+}
+ 
+
+.specialText{
+  background: -webkit-linear-gradient(#00aeff,blue, purple);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.genShadow{
+  box-shadow:  0rem 0rem 20px rgba(0, 0, 0, 0.15) !important;
+}
+
+nav{
+  width: fit-content;
+  background-color: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(20px) saturate(160%) contrast(45%) brightness(140%);
+  -webkit-backdrop-filter: blur(20px) saturate(160%) contrast(45%) brightness(140%);
+  
+}
+
+nav a{
+  font: larger;
+  font-weight: 400;
+  margin: 10px;
+}
+
+nav a:hover{
+  color: #00aeff;
+  cursor: pointer;
+}
+
+.colorBg{
+  background-image: -webkit-radial-gradient(#00aeff, #fff);
 }
