--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,16 +1,33 @@
-@import url('https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+html {
+  overflow: scroll;
+  overflow-x: hidden;
+}
+::-webkit-scrollbar {
+  width: 0;  /* Remove scrollbar space */
+  background: transparent;  /* Optional: just make scrollbar invisible */
+}
+/* Optional: show position indicator in red */
+::-webkit-scrollbar-thumb {
+  background: #FF0000;
+}
 
 body {
-  font-family: 'Epilogue', sans-serif;
+  font-family: 'Poppins', sans-serif !important;
+  background-image: -webkit-radial-gradient(#00aeff, #bef0ffa4);
+  background-attachment: fixed;
+  scrollbar-width: none;
+  color: #fff;
 }
 
 .viewPage{
   height: 100vh;
+  position: relative;
 }
  
 
 .specialText{
-  background: -webkit-linear-gradient(#00aeff,blue, purple);
+  background: -webkit-linear-gradient(white, #0a4561);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -20,7 +37,7 @@ body {
 }
 
 nav{
-  z-index: -1;
+  z-index: 0 !important;
   width: fit-content;
   background-color: rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(20px) saturate(160%) contrast(45%) brightness(140%);
@@ -40,5 +57,22 @@ nav a:hover{
 }
 
 .colorBg{
-  background-image: -webkit-radial-gradient(#00aeff, #fff);
+
+}
+
+.rocketImg{
+  animation: Bounce;
+  transition: 0.5s ease;
+  transform: rotate(20deg);
+}
+
+@keyframes Bounce {
+  0%{
+    
+
+  };
+  100%{
+    margin-bottom: 30px;
+  }
+  
 }
