--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,6 +48,8 @@ body {
 }
 
 nav{
+  z-index: 1 !important;
+  position: fixed;
   color: white;
   width: fit-content;
   background-color: rgba(255, 255, 255, 0.2); 
